Fixed query grid header collapsing for modifiers

--- a/src/WebComponents/QueryGrid/query-grid-select-all.scss
+++ b/src/WebComponents/QueryGrid/query-grid-select-all.scss
@@ -9,14 +9,6 @@
     align-self: flex-end;
     cursor: pointer;
 
-    &[disabled] {
-        cursor: default;
-
-        > vi-icon, > paper-ripple {
-            visibility: hidden;
-        }
-    }
-
     > vi-icon {
         height: var(--theme-h2);
         width: var(--theme-h2);
